log
Fri 15 Sep 2023 05:13:49 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: expected ‘,’ or ‘;’ before ‘if’
   42 |     if (map != NULL) {
      |     ^~
treemap.c:47:8: error: ‘TreeMap’ has no member named ‘size’
   47 |     map->size = 0;
      |        ^~
treemap.c:48:23: error: ‘lt’ undeclared (first use in this function)
   48 |     map->lower_than = lt
      |                       ^~
treemap.c:48:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:25: error: expected ‘;’ before ‘return’
   48 |     map->lower_than = lt
      |                         ^
      |                         ;
   49 | 
   50 |     return NULL;
      |     ~~~~~~               
treemap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5c69fba
Fri 15 Sep 2023 05:14:05 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:8: error: ‘TreeMap’ has no member named ‘size’
   46 |     map->size = 0;
      |        ^~
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:47:25: error: expected ‘;’ before ‘return’
   47 |     map->lower_than = lt
      |                         ^
      |                         ;
   48 | 
   49 |     return NULL;
      |     ~~~~~~               
treemap.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f244fd
Fri 15 Sep 2023 05:23:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:8: error: ‘TreeMap’ has no member named ‘size’
   46 |     map->size = 0;
      |        ^~
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d2d2391
Fri 15 Sep 2023 05:24:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:8: error: ‘TreeMap’ has no member named ‘size’
   46 |     map->size = 0;
      |        ^~
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7e22acc
Fri 15 Sep 2023 05:27:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
38cd5ce
Fri 15 Sep 2023 05:27:46 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|8
total_score: 0/70
0047ebd
Fri 15 Sep 2023 05:28:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
783d44f
Fri 15 Sep 2023 05:28:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:5: error: expected ‘;’ before ‘return’
   48 |     return map;
      |     ^~~~~~
treemap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
055cfbe
Fri 15 Sep 2023 05:28:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
0f104f8
Fri 15 Sep 2023 05:29:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:21: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than=lt;
      |                     ^~
treemap.c:47:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6620709
Fri 15 Sep 2023 05:30:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
5fc887c
Fri 15 Sep 2023 05:34:55 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:26: error: implicit declaration of function ‘searchNode’ [-Werror=implicit-function-declaration]
   81 |     TreeNode *resultNode=searchNode(tree->root,key,tree->lower_than);
      |                          ^~~~~~~~~~
treemap.c:81:26: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:83:33: error: expected ‘;’ before ‘return’
   83 |         tree->current=resultNode
      |                                 ^
      |                                 ;
   84 |         return resultNode->pair
      |         ~~~~~~                   
treemap.c:87:5: error: expected ‘;’ before ‘}’ token
   87 |     }
      |     ^
treemap.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3922322
Fri 15 Sep 2023 05:37:46 PM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:9: error: expected ‘,’ or ‘;’ before ‘if’
   85 |         if(compare_result > 0){
      |         ^~
treemap.c:87:10: error: ‘else’ without a previous ‘if’
   87 |         }else if(compare_result > 0){
      |          ^~~~
treemap.c:91:37: error: expected ‘;’ before ‘}’ token
   91 |             return currentNode->pair
      |                                     ^
      |                                     ;
   92 |         }
      |         ~                            
treemap.c:95:1: error: expected ‘;’ before ‘}’ token
   95 | }
      | ^
Compilation failed
d0c324b
